*** empty log message ***

--- a/Documents/projektisuunnitelma/sisalto.tex
+++ b/Documents/projektisuunnitelma/sisalto.tex
@@ -159,7 +159,7 @@ tai ovat vajaat.
 
 \begin{tabular}{llll} \\
 Nimi & Todennäköisyys & Vaikutus & Prioriteetti \\
-Vaatimukset & +++ & *** & (2) \\
+Vaatimukset & ++ & ** & (2) \\
 Tekniset & + & *** & (4) \\
 Ulkoiset & ++++ & **** & (2) \\
 Kokoarvio & ++ & *** & (1) \\
@@ -171,10 +171,9 @@ Seuraavat riskit on päätetty ottaa huomioon projektissa:
 
 \begin{tabular}{llll} \\
 Nimi & Todennäköisyys & Vaikutus & Prioriteetti \\
-Vaatimukset & +++ & *** & (2) \\
-Aikataulu & ++++ & **** & (1) \\
-Hidastelu & ++ & *** & (1) \\
-Kokoarvio & ++ & *** & (2) \\
+Ulkoiset & +++ & *** & (2) \\
+Aikataulu & ++++ & ** & (1) \\
+Hidastelu & ++ & ** & (1) \\
 \end{tabular}
 
 
@@ -399,8 +398,8 @@ Seurantakokouksessa tarkistetaan, että projektissa on pysytty aikataulussa
 ja seurattu projektisuunnitelmaa. Seurantakokousten pöytäkirjat lähetetään 
 palaverien jälkeen projektin sähköpostilistalle.
 
-Projektiryhmä pitää yhden tarkastuksen molemmissa sykleissä. Maanantaina
-9.10. pidetään tarkastus suunnitteludokumentista. Muista suunnittelu- ja vaatimusdokumentista
+Projektiryhmä pitää yhden tarkastuksen molemmissa sykleissä. Torstaina
+16.11. pidetään tarkastus suunnitteludokumentista. Muista suunnittelu- ja vaatimusdokumentista
 pidetään epämuodollinen tarkastustilaisuus.
 
 
