--- a/Documents/suunnitteludokumentti/classes.tex
+++ b/Documents/suunnitteludokumentti/classes.tex
@@ -237,66 +237,155 @@ Set "last task modification by" attribute to Name, set last-modification-timesta
 {\tt	public void setDescription(String desc)} \\
 Set description (tehtävänanto) of this task\\
 
+{\tt	public void setPublicInput(String input)} \\
+Set the public input as String of this task\\
 
+{\tt	public void setSecretInput(String input)} \\
+Set the secret input as String of this task\\
 
+{\tt	public void setModelAnswer(String code)} \\
+Set model answer code\\
 
+{\tt	public void setCategory(String categ)} \\
+Set task category of this task\\
 
+{\tt	public void setTitoTaskType(String type)} \\
+Set task type of this task\\
 
+{\tt	public void setFillInPreCode(String code)} \\
+Set the code that is prepended before student's code in a fill-in task\\
+
+{\tt	public void setFillInPostCode(String code)} \\
+Set the code that is appended to student's code in a fill-in task\\
+
+{\tt	public void setFillInTask(boolean fillIn)} \\
+Set this task as fill-in or create-full-program\\
+
+{\tt	public void setNoOfTries(int noOfTries)} \\
+Sets number of tries for student\\
+
+{\tt	public void setValidateByModel(boolean useModel)} \\
+Set the validation method of this task\\
+
+{\tt	public void setModificationDate()} \\
+Set the date and time this task was last modified\\
+
+{\tt	public void setHasSucceeded(boolean hasSucceeded)} \\
+Set the hasSucceeded true or false depending the student has passed the task\\
+
+{\tt	public void setPassFeedBack(String pass)} \\
+Set return feedback if student passes the task\\
+
+{\tt	public void setFailFeedBack(String fail)} \\
+Set return feedback if student fails the task\\
+
+{\tt	public void setMaximumNumberOfInstructions(int num)} \\
+Endless loop prevention\\
+
+{\tt	public void setMaximumNumberOfInstructions(String num)} \\
+Endless loop prevention\\
+
+{\tt	public String getTaskID()} \\
+Return id of this task\\
+
+{\tt	public String getLanguage()} \\
+Return the language of this task\\
 
 {\tt	public String getName()} \\
 Return the name of this task\\
 
-
-
 {\tt	public String getAuthor()} \\
 Return name of the last person who has modified this task\\
-
-
-
-{\tt	public Date getModificationDate()} \\
-Return the date and time this task was last modified\\
-
-{\tt	public String getModelAnswer()} \\
-Return code of the model answer provided by teacher\\
-	
-{\tt	public void setModelAnswer(String code)} \\
-Set model answer code\\
-
-{\tt	public boolean isValidateByModel()} \\
-Return true if this task is to be validated by comparing results
-of the student's answer to results of teacher's answer\\
-	
-{\tt	public void setValidateByModel(boolean useModel)} \\
-Set the validation method of this task\\
-
-{\tt	public String getCategory()} \\
-Return the task category of this task\\
-	
-{\tt	public void setCategory(String category)} \\
-Set task category of this task\\
-	
-{\tt	public boolean isFillInTask()} \\
-Return true if this is a fill-in task\\
-	
-{\tt	public void setFillInTask(boolean fillIn)} \\
-Set this task as fill-in or create-full-program \\
-
-{\tt	public String getFillInPreCode()} \\
-Return the code that is prepended before student's code in a fill-in task\\
-	
-{\tt	public void SetFillInPreCode(String code)} \\
-Set the code that is prepended before student's code in a fill-in task\\
-	
-{\tt	public String getFillInPostCode()} \\
-Return the code that is appended to student's code in a fill-in task\\
-	
-{\tt	public void SetFillInPostCode(String code)} \\
-Set the code that is appended to student's code in a fill-in task\\
 
 {\tt	public String getDescription()} \\
 Return the description (tehtävänanto) of this task\\
 
+{\tt	public String getPublicInput()} \\
+Return the public input as String of this task\\
 
+{\tt	public String getSecretInput()} \\
+Return the secret input as String of this task\\
+
+{\tt	public String getModelAnswer()} \\
+Return code of the model answer provided by teacher\\
+
+{\tt	public String getCategory()} \\
+Return the task category of this task\\
+
+{\tt	public String getTitoTaskType()} \\
+Return the task type of this task\\
+
+{\tt	public String getFillInPreCode()} \\
+Return the code that is prepended before student's code in a fill-in task\\
+
+{\tt	public String getFillInPostCode()} \\
+Return the code that is appended to student's code in a fill-in task\\
+
+{\tt	public int getNoOfTries()} \\
+Return the number of tries student has tried to make this task\\
+
+{\tt	public boolean isFillInTask()} \\
+Return true if this is a fill-in task\\
+
+{\tt	public boolean isProgrammingTask()} \\
+Return true if this is a programming task\\
+
+{\tt	public boolean isValidateByModel()} \\
+Return true if this task is to be validated by comparing results of the student's
+answer to results of teacher's answer\\
+
+{\tt	public Date getModificationDate()} \\
+Return the date and time this task was last modified\\
+
+{\tt	public boolean isHasSucceeded()} \\
+Return true if student has made the task, false if she/he hasn't\\
+
+{\tt	public String getPassFeedBack()} \\
+Return feedback if student passes the task\\
+
+{\tt	public String getName()} \\
+Return the name of this task\\
+
+{\tt	public String getFailFeedBack()} \\
+Return feedback if student fails the task\\
+
+{\tt	public int getMaximumNumberOfInstructions()} \\
+Returns loop prevention value\\
+
+{\tt	public String getDateAsString()} \\
+Returns String of the date and time\\
+
+{\tt	protected static String parseXMLString(String XML, String tagname)} \\
+Deserialize String value from XML string. Helper function for initSubClass()\\
+
+{\tt	protected static boolean parseXMLBoolean(String XML, String tagname)} \\
+Deserialize boolean value from XML string. Helper function for initSubClass()\\
+
+{\tt	protected static int parseXMLint(String XML, String tagname)} \\
+Deserialize int value from XML string. Helper function for initSubClass() return value or 0\\
+
+{\tt	public int getMaximumNumberOfInstructions()} \\
+Returns loop prevention value\\
+
+{\tt	protected static String toXML(String tagname, int value)} \\
+Serialize long value to XML string. Helper function for serializeSubClass()\\
+
+{\tt	protected static String toXML(String tagname, String value)} \\
+Serialize String value to XML string. Helper function for serializeSubClass()\\
+
+{\tt	public String serializeToXML()} \\
+Return a serialized this Task class into XML-format\\
+
+{\tt	public void deserializeFromXML(String xml)} \\
+Instantiate the Task class's parameters using the serialized form XML. 
+@throws RuntimeException exceptions in the deserialization are 
+caught and rethrown as uncheckced exception.\\
+
+{\tt	public Date getModificationDate()} \\
+Return the date and time this task was last modified\\
+
+{\tt	public String toString()} \\
+Returns String from the task\\
 
 
 
