*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -308,6 +308,10 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 \subsection{Answer-servlet}
 Toteutetaan ja suunnitellaan toisessa iteraatiossa
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {sekvenssikaaviot/Tehtävän_tarkistus.eps}
+	\caption{Tehtävän tarkistus}
+\end{figure}
 
 
 
