--- a/Documents/suunnitteludokumentti/classes.tex
+++ b/Documents/suunnitteludokumentti/classes.tex
@@ -43,7 +43,7 @@ Constructor to initialize mandatory data members of Criterion.\\
 {\tt	public String getId()}\\
 Return the identifier of this Criterion\\
 
-{\tt	public String getName(ResourceBundle languageBundle)}\\
+{\tt	public abstract String getName(ResourceBundle languageBundle)}\\
 Return human-readable name of this criterion\\
 {\tt@param languageBundle} Language dependant parts of crierion names\\
 
